# sudoku-sat

./: CMakeLists.txt  README.md
cmake/Catch2/: Catch2Config.cmake
include/: sudoku_sat.h
lib/sudoku/: CMakeLists.txt  sudoku_sat.cpp
tools/sudoku/: CMakeLists.txt  main.cpp
